--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -455,6 +455,11 @@ input[data-error]::after {
   margin: 0;
   margin-top: 59px;
 }
+
+.confirmationMessage {
+  font-size: 0.6em;
+  color: red;
+}
 .hero-img {
   grid-column: span 8;
 }
