--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -173,7 +173,7 @@ main {
   margin: 5% auto;
   width: 100%;
   max-width: 500px;
-  animation-name: modalopen;
+  animation-name: modalopen, modalclose;
   animation-duration: var(--modal-duration);
   background: #232323;
   border-radius: 10px;
@@ -523,7 +523,17 @@ footer {
   }
 }
 
-@keyframes modalopen {
+@keyframes modalopen  {
+  from {
+    opacity: 0;
+    transform: translateY(-150px);
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes modalclose  {
   from {
     opacity: 0;
     transform: translateY(-150px);
