--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -10,6 +10,12 @@
 }
 /* Landing Page */
 
+html {
+  height:100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
 
 body {
   margin: 0;
@@ -33,7 +39,6 @@ img {
 }
 
 .topnav {
-  overflow: hidden;
   margin: 3.5%;
 }
 .header-logo {
@@ -41,6 +46,8 @@ img {
 }
 .main-navbar {
     float: right;
+    display: flex;
+    padding-left: 20px;
 }
 .topnav a {
   float: left;
@@ -50,7 +57,7 @@ img {
   padding: 12px 12px;
   margin: 5px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   font-family: Roboto, sans-serif;
 }
 
@@ -92,14 +99,20 @@ img {
   }
 }
 
-
+.confirmationBlock {
+  display: flex;
+  justify-content: center;
+}
+#confirmationMessage {
+  color : red;
+}
 
  @media screen and (max-width: 540px) {
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
+    margin-top: 10px;
   }
 } 
 
@@ -134,7 +147,10 @@ main {
 }
 
 .footer {
+  position: relative;
+  text-align: center;
   margin: 20px;
+  width: 100%;
   padding: 10px;
   font-family: var(--font-slab);
 }
@@ -484,9 +500,11 @@ input[data-error]::after {
   display: none;
 }
 footer {
+  position: relative;
+  width: 100%;
   padding-left: 2vw;
   padding-right: 2vw;
-  margin: 0 20px;
+  margin-right: 20px;
 }
 @media screen and (max-width: 800px) {
   .hero-section {
